--- a/lms-video-streaming-be/src/main/resources/application.yaml
+++ b/lms-video-streaming-be/src/main/resources/application.yaml
@@ -14,7 +14,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     database: postgresql
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: update
     properties:
