--- a/lms-video-streaming-be/src/main/resources/application.yaml
+++ b/lms-video-streaming-be/src/main/resources/application.yaml
@@ -77,7 +77,7 @@ logging:
     com.hust: DEBUG
 
     # Database (Hibernate) -> Hiện câu Query SQL
-    org.hibernate.SQL: DEBUG
+    org.hibernate.SQL: INFO
 
     # Nếu muốn hiện cả tham số trong câu Query (dấu ? thay bằng giá trị thật)
     # Cảnh báo: Log sẽ trôi rất nhanh, chỉ bật khi debug lỗi DB
