--- a/lms-video-streaming-be/pom.xml
+++ b/lms-video-streaming-be/pom.xml
@@ -102,6 +102,13 @@
 			<version>4.0.0</version>
 		</dependency>
 
+		<!--	cloudinary	-->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.33.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
