--- a/lms-video-streaming-be/pom.xml
+++ b/lms-video-streaming-be/pom.xml
@@ -109,6 +109,12 @@
 			<version>1.33.0</version>
 		</dependency>
 
+		<!--	rabbitMQ	-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
