(backend) Xứ lý logic làm sạch dữ liệu bằng sử dụng lib jsoup, thêm LoggingFilter , xử lý logic cập nhật thông tin instructor và logic thêm sửa khóa học

--- a/lms-video-streaming-be/pom.xml
+++ b/lms-video-streaming-be/pom.xml
@@ -115,6 +115,13 @@
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 
+		<!--	Giúp làm sạch dữ liệu input người dùng	-->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.17.2</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -131,6 +138,8 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
