--- a/lms-video-streaming-be/src/main/resources/application.yaml
+++ b/lms-video-streaming-be/src/main/resources/application.yaml
@@ -4,9 +4,14 @@ server:
   servlet:
     context-path: ${API_PREFIX}
 
+
 spring:
   application:
     name: LMS Streaming Platform
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 20MB
   datasource:
     url: ${DATABASE_URL}
     username: ${DATABASE_USERNAME}
